[package]
name = "jj-gpc"
version = "0.5.2"
edition = "2021"
license-file = "LICENSE.md"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
repository = "https://github.com/chriskrycho/jj-gpc"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
ollama-rs = "0.2"
regex = "1"
tokio = { version = "1", features = ["macros", "rt"] }
