[package]
name = "jj-gpc"
version = "0.7.1"
edition = "2021"
license-file = "LICENSE.md"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
repository = "https://github.com/chriskrycho/jj-gpc"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
ollama-rs = "0.2"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
schemars = { version = "0.8" }
tokio = { version = "1", features = ["macros", "rt"] }
